# pgdr

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SKILL.md  deny.toml  docker-compose.yml  mise.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: dispatch_build.yml  on_pr.yml  on_pr_target.yml  on_push.yml  run_build.yml  run_checks.yml  run_tests.yml
crates/pgdr/: Cargo.toml
crates/pgdr-cli/: Cargo.toml
crates/pgdr-cli/src/: error.rs  main.rs  output.rs  parse.rs
crates/pgdr-cli/src/commands/: constraint.rs  db.rs  function.rs  graph.rs  index.rs  mod.rs  query.rs  role.rs  schema.rs  sequence.rs  server.rs  table.rs  view.rs
crates/pgdr/src/: error.rs  lib.rs  output.rs
crates/pgdr/src/commands/: connections.rs  constraints.rs  databases.rs  function.rs  functions.rs  graph.rs  index.rs  indices.rs  locks.rs  mod.rs  queries.rs  query.rs  role.rs  roles.rs  schema.rs  schemas.rs  sequences.rs  server.rs  tables.rs  view.rs  views.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: connections.rs  locks.rs  queries.rs
