[workspace]
resolver = "3"
members  = ["crates/*", "tests"]

[workspace.package]
edition      = "2024"
license      = "MIT"
publish      = false
authors      = ["Philip Ahlberg <philipahlberg@gmail.com>"]
rust-version = "1.94"

[workspace.dependencies]
clap           = { version = "4", features = ["derive", "env"] }
serde_json     = "1"
tokio          = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-time-0_3"] }
postgres-types = { version = "0.2", features = ["with-serde_json-1", "with-uuid-1", "with-time-0_3"] }
time           = { version = "0.3", features = ["formatting"] }
uuid           = { version = "1" }
thiserror      = "2"
pg_query       = "6"

[workspace.lints.rust]
future_incompatible       = { level = "warn", priority = -1 }
nonstandard_style         = { level = "warn", priority = -1 }
rust_2018_idioms          = { level = "warn", priority = -1 }
unsafe_code               = "deny"
unused_crate_dependencies = "deny"
unexpected_cfgs           = "warn"

[workspace.lints.clippy]
all                                = { level = "warn", priority = -1 }
await_holding_lock                 = "warn"
checked_conversions                = "warn"
doc_markdown                       = "warn"
enum_glob_use                      = "warn"
exit                               = "warn"
expl_impl_clone_on_copy            = "warn"
explicit_deref_methods             = "warn"
explicit_into_iter_loop            = "warn"
fallible_impl_from                 = "warn"
filter_map_next                    = "warn"
flat_map_option                    = "warn"
float_cmp_const                    = "warn"
fn_params_excessive_bools          = "warn"
from_iter_instead_of_collect       = "warn"
if_let_mutex                       = "warn"
implicit_clone                     = "warn"
imprecise_flops                    = "warn"
inefficient_to_string              = "warn"
invalid_upcast_comparisons         = "warn"
large_digit_groups                 = "warn"
large_stack_arrays                 = "warn"
large_types_passed_by_value        = "warn"
let_unit_value                     = "warn"
linkedlist                         = "warn"
lossy_float_literal                = "warn"
macro_use_imports                  = "warn"
manual_ok_or                       = "warn"
map_flatten                        = "warn"
map_unwrap_or                      = "warn"
match_same_arms                    = "warn"
match_wild_err_arm                 = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget                         = "warn"
missing_enforced_import_renames    = "warn"
mut_mut                            = "warn"
mutex_integer                      = "warn"
needless_borrow                    = "warn"
needless_continue                  = "warn"
needless_for_each                  = "warn"
option_option                      = "warn"
path_buf_push_overwrite            = "warn"
ptr_as_ptr                         = "warn"
rc_mutex                           = "warn"
ref_option_ref                     = "warn"
rest_pat_in_fully_bound_structs    = "warn"
same_functions_in_if_condition     = "warn"
semicolon_if_nothing_returned      = "warn"
string_add_assign                  = "warn"
string_add                         = "warn"
string_lit_as_bytes                = "warn"
trait_duplication_in_bounds        = "warn"
unimplemented                      = "warn"
unnested_or_patterns               = "warn"
unused_self                        = "warn"
useless_transmute                  = "warn"
verbose_file_reads                 = "warn"
zero_sized_map_values              = "warn"
new_without_default                = "allow"
uninlined_format_args              = "warn"
