[package]
name                   = "tests"
version                = "0.1.0"
publish                = false
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio.workspace          = true
tokio-postgres.workspace = true

[dev-dependencies]
pgdr                 = { path = "../crates/pgdr" }
serde_json.workspace = true
