[package]
name                   = "pgdr-cli"
version                = "0.1.0"
publish                = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "pgdr"
path = "src/main.rs"

[dependencies]
