[package]
name                   = "pgdr-cli"
version                = "0.1.0"
publish                = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "pgdr"
path = "src/main.rs"

[dependencies]
clap.workspace           = true
serde_json.workspace     = true
tokio.workspace          = true
tokio-postgres.workspace = true
postgres-types.workspace = true
time.workspace           = true
uuid.workspace           = true
thiserror.workspace      = true
pg_query.workspace       = true
